<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/StudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#2196F3"
        android:text="@string/ID"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Num1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/Num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="24dp"
        android:text="@string/N1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Num2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/value1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/outside"
        android:hint="@string/hint"

        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/Num1"
        app:layout_constraintTop_toBottomOf="@+id/StudentID" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/oval"
        android:minWidth="10dp"
        android:minHeight="10dp"
        android:text="@string/clear"
        android:textSize="30sp"
        app:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answervalue" />

    <TextView
        android:id="@+id/Num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="24dp"
        android:text="@string/N2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Num1" />

    <EditText
        android:id="@+id/value2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/outside"
        android:hint="@string/hint"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/Num2"
        app:layout_constraintTop_toBottomOf="@+id/value1" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:minWidth="10dp"
        android:minHeight="10dp"
        android:text="@string/plus"
        android:textSize="18sp"
        app:backgroundTint="@color/mycolor"
        app:layout_constraintEnd_toStartOf="@+id/Button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Num2" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:minWidth="10dp"
        android:minHeight="10dp"
        android:text="@string/minus"
        android:textSize="18sp"
        app:backgroundTint="@color/mycolor"
        app:layout_constraintEnd_toStartOf="@+id/Button3"
        app:layout_constraintTop_toBottomOf="@+id/Num2" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:minWidth="10dp"
        android:minHeight="10dp"
        android:text="@string/mup"
        android:textSize="18sp"
        app:backgroundTint="@color/mycolor"
        app:layout_constraintEnd_toStartOf="@+id/Button4"
        app:layout_constraintTop_toBottomOf="@+id/Num2" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:minWidth="10dp"
        android:minHeight="10dp"
        android:text="@string/div"
        android:textSize="18sp"
        app:backgroundTint="@color/mycolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Num2" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="75dp"
        android:text="@string/answer"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button1" />

    <TextView
        android:id="@+id/answervalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/todo"
        android:text="@string/answer_value"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toEndOf="@+id/answer"
        app:layout_constraintTop_toBottomOf="@+id/Button2" />

</androidx.constraintlayout.widget.ConstraintLayout>